--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ decorator==4.3.0
 Flask==1.1.1
 gast==0.2.0
 grpcio==1.15.0
+gunicorn==19.9.0
 h5py==2.8.0
 idna==2.8
 itsdangerous==1.1.0
@@ -47,3 +48,4 @@ toolz==0.9.0
 urllib3==1.25.6
 Werkzeug==0.16.0
 zope.interface==4.6.0
+
